--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,23 +1,11 @@
-ja:
-  enums:
-    item:
-      is_active:
-      on_sale : "販売中"
-      sold_out: "売切れ"
-
-
-    customer:
-      is_deleted:
-        Valid     : "有効"
-        Withdrawal: "退会"
-
-
-    order:
-      payment:
+ja: #一番初めのみ記載。以後はモデル（テーブル名）から先を記載する
+  enums:　#一番初めのみ記載。以後はモデル（テーブル名）から先を記載するｓ
+    orders:
+      payment_method:
         credit_card: "クレジットカード"
         transfer   : "銀行振込"
 
-      is_active:
+      status:
         waiting_for_payment : "入金待ち"
         payment_confirmation: "入金確認"
         production          : "制作中"
@@ -25,16 +13,8 @@ ja:
         sent                : "発送済み"
 
 
-    genre:
-      name:
-        cake       : "ケーキ"
-        pudding    : "プリン"
-        baked_goods: "焼き菓子"
-        candy      : "キャンディ"
-
-
     order_details:
-      is_active:
+      making_status:
         cannot_start          : "着手不可"
         waiting_for_production: "制作待ち"
         production            : "制作中"
