--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,3 +1,4 @@
+# ja.ymｌに関しては、スペースでも正しく読み込まないため、スペース・空欄行は挿入しないよう注意
 #ja   :一番初めのみ記載。以後はモデル（テーブル名）から先を記載する
 #enums:一番初めのみ記載。以後はモデル（テーブル名）から先を記載する
 ja:
